# SnapCinemaStudio

./: .gitignore  .gitleaks.toml  Anchor.toml  Cargo.toml  LICENSE  README.md
.cursor/rules/: analytics-ux-planning.mdc  read-stake-flow-for-planning.mdc  stake-curation-flow.mdc
.github/workflows/: app-ci.yml  gitleaks.yml
app/: .env.example  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.node.json  vercel.json  vite.config.ts
app/api/: ambient-bs58.d.ts  health.ts  mailing-list.ts  scene-board-session.ts  scene-board.ts  snap-alpha-priority.ts
app/api/lib/: apiErrors.ts  clientIp.ts  cors.ts  enforcePublicSignupGuards.ts  parseVercelJsonBody.ts  rateLimitPublicSignup.ts  requestLimits.test.ts  requestLimits.ts  sceneBoardHmac.ts  (+6 more)
app/scripts/: immediate-yield-worker.ts  print-anchor-discriminators.js
app/src/: App.css  App.tsx  RootErrorBoundary.tsx  bootstrap.ts  index.css  main.tsx  polyfill-buffer.ts
docs/: colosseum-hackathon-sceneforge.md  copilot-hackathon-reassessment.md  devnet-stake-to-curate-migration.md  project-description.md  sceneforge-legal-checklist.md  sceneforge-phase-a.md  sceneforge_deep_dive_de73a1bd.plan.md  security.md  stake-curation-flow.md  vault-yield-pool-plan.md
docs/analytics/: ux-findings.md
programs/stake_to_curate/: Cargo.toml  README.md
programs/stake_to_curate/keys/: stake_to_curate-keypair.json
programs/stake_to_curate/src/: lib.rs
supabase/migrations/: 20260415120000_scene_boards.sql  20260419120000_mailing_list_signups.sql  20260430120000_snap_alpha_priority_registrations.sql
(+84 files in other folders)
