[package]
name = "stake_to_curate"
version = "0.1.0"
description = "StakeToCurate — stake-backed curation primitive (SnapCinema Studio)"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "stake_to_curate"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
